doc/examples/InvalidTests/TestLogical1.agl
x : Boolean = True;
y : Integer = 5;
z : Boolean = x and y; # Error: Both operands of 'and' must be boolean!
